# matric-eval

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PLANNING.md  README.md  SECURITY.md  SESSION_INIT.md  pyproject.toml  run_smoke.py
.aiwg/architecture/: ADR-002-inspect-ai-framework.md  ADR-003-jsonl-test-format.md  ADR-004-tiered-evaluation.md  ADR-005-checkpoint-resume-design.md
.aiwg/deployment/: deployment-plan.md
.aiwg/frameworks/: registry.json
.aiwg/gates/: gate-all-phases-summary.md  gate-construction.md  gate-elaboration.md  gate-inception.md  gate-transition.md  transition-validation-report-20260124.md
.aiwg/handoffs/: handoff-construction-transition.md  handoff-elaboration-construction.md  handoff-transition-production.md
.aiwg/intake/: README.md  option-matrix.md  project-intake.md  solution-profile.md
.aiwg/planning/: README.md  construction-summary.md  iteration-details-construction.md  iteration-plan-construction.md  iteration-plan-week4.csv  iteration-plan-week5.csv  iteration-plan-week6.csv  iteration-plan-week7.csv  phase-plan-elaboration.md  phase-plan-inception.md  phase-plan-transition.md
.aiwg/quality/: code-review-checklist.md  definition-of-done.md  quality-plan.md
.aiwg/ralph/: completion-20260124.md  completion-report-construction.md  current-loop.json  deployment-completion-20260124.md  iteration-1-verification.md  loop-state.json
.aiwg/ralph/iterations/: iteration-13.json  iteration-8.json
.aiwg/requirements/: traceability-matrix.md  use-case-UC004-model-recommendation.md  vision.md
.aiwg/research/: research-gap-analysis.md  self-evaluation-research-based.md
.aiwg/risks/: risk-list.md
.aiwg/security/: security-posture.md  threat-model.md
.aiwg/team/: agent-assignments.md  team-profile.yaml
.aiwg/testing/: test-plan-integration.md  test-plan-unit.md
.github/workflows/: ci.yml
bindings/typescript/: package-lock.json  package.json  tsconfig.json
bindings/typescript/src/: client.ts  index.ts  types.ts
docs/: README.md
docs/architecture/: overview.md
docs/architecture/decisions/: ADR-001-python-core-with-bindings.md  ADR-005-thinking-model-evaluation.md
docs/deployment/: cicd-pipeline.md  release-notes-template.md
docs/development/: checkpoint-resume.md  planning.md  roadmap.md  thinking-models.md
docs/requirements/: supplementary-requirements.md  vision.md
docs/requirements/use-cases/: use-case-UC001-run-benchmark.md  use-case-UC002-checkpoint-resume.md  use-case-UC003-custom-tests.md  use-case-UC005-cicd-integration.md
docs/research/: citable-claims-index.md
docs/testing/: contributing.md  strategy.md
src/matric_eval/: __init__.py  cli.py  config.py  datasets.py  discovery.py  logging.py  parallel.py  recommendation.py
src/matric_eval/analysis/: __init__.py  thinking_metrics.py
src/matric_eval/config/: __init__.py  settings.py
src/matric_eval/core/: __init__.py  engine.py
src/matric_eval/models/: __init__.py  detection.py
src/matric_eval/prompts/: __init__.py  templates.py
src/matric_eval/providers/: __init__.py  base.py  chutes.py  llamacpp.py  matrix.py  ollama.py  openrouter.py  registry.py  vllm.py
src/matric_eval/scorers/: __init__.py  code_execution.py  ds1000_scorer.py  io_execution.py  llm_judge.py  (+1 more)
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  factories.py  test_checkpoint_resume.py  test_cli.py  test_cli_checkpoint.py  test_config.py  test_config_compatibility.py  test_package_structure.py  test_recovery.py  test_state_manager.py
tests/integration/: __init__.py  test_ollama.py
tests/unit/: __init__.py  test_arc.py  test_cli.py  test_code_execution.py  test_code_execution_summary.md  test_config.py  test_custom.py  test_datasets.py  test_discovery.py  test_ds1000.py  test_ds1000_scorer.py  test_engine.py  test_gsm8k.py  test_humaneval.py  test_ifeval.py  test_io_execution.py  test_livecodebench.py  test_llm_judge.py  test_logging.py  test_mbpp.py  test_mmlu.py  test_mtbench.py  test_multidimensional.py  test_parallel.py  test_prompts.py  test_providers.py  test_recommendation.py  test_recovery.py  test_state_manager.py  test_task_thinking_integration.py  test_tasks.py  test_thinking.py  test_thinking_metrics.py  test_tool_calling.py
(+34 files in other folders)
