[project]
name = "matric-eval"
version = "0.1.0"
description = "Consolidated model evaluation framework for the matric ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "matric team" }]
keywords = ["llm", "evaluation", "ollama", "benchmark"]

dependencies = [
    "inspect-ai>=0.3.203",
    "httpx>=0.28.0",
    "openai>=2.30.0",
    "click>=8.2.0",
    "rich>=14.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.0",
    "mypy>=1.20.0",
    "ruff>=0.15.0",
]
# Data science dependencies for DS-1000 benchmark
ds1000 = [
    "pandas>=3.0.0",
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
matric-eval = "matric_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matric_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (require external services)",
    "slow: Slow tests (>1s)",
    "smoke: Smoke tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/matric_eval"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
